# infragen

./: .gitignore  INFRAGEN_PROJECT_CONTEXT.md  pyproject.toml
agents/: __init__.py  cost_estimator.py  orchestrator.py  security_auditor.py  terraform_writer.py
cli/: __init__.py  doctor.py  main.py  prompts.py
deployer/: __init__.py  docker.py  static.py  terraform.py
docker_templates/: django.dockerfile  express.dockerfile  fastapi.dockerfile  flask.dockerfile  nextjs.dockerfile
models/: __init__.py  enums.py  infra_spec.py  scan_result.py
prerequisites/: __init__.py  checker.py  permissions.py
scanner/: __init__.py  dependencies.py  detector.py  dockfile.py  env_vars.py  ports.py
terraform/free/backend/: ecr.tf.jinja  key_pair.tf.jinja  main.tf.jinja  outputs.tf.jinja  security_groups.tf.jinja  user_data.sh.jinja  variables.tf.jinja
terraform/free/frontend/: main.tf.jinja  variables.tf.jinja
terraform/prod/backend/: alb.tf.jinja  ecr.tf.jinja  ecs.tf.jinja  elasticache.tf.jinja  iam.tf.jinja  main.tf.jinja  nat.tf.jinja  outputs.tf.jinja  rds.tf.jinja  security_groups.tf.jinja  ssm.tf.jinja  variables.tf.jinja  vpc.tf.jinja
terraform/prod/frontend/: main.tf.jinja  outputs.tf.jinja
